Resize images and fix spacing and add extra line to end of files

--- a/views/memory_game.scss
+++ b/views/memory_game.scss
@@ -41,7 +41,7 @@ body {
 }
 
 .card {
-  margin: 10px;
+  margin: 5px;
   padding: 5px;
   border-radius: 10px;
   border: 2.5px solid transparent;
@@ -59,6 +59,11 @@ body {
     background-color: grey;
   }
 
+}
+
+img {
+  width: 170px;
+  height: 170px;
 }
 
 h1 {
